# AzulMARL

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run_coverage.yaml
azul_ai_env/: azul_env.py
azul_ai_env/render/: base_renderer.py
azul_marl_env/: __init__.py  azul_env.py  simulator.py
azul_marl_env/render/: azul_renderer.py  bag_lid_tab_renderer.py  legend_tab_renderer.py  main_tab_renderer.py  player_tab_renderer.py
tests/: azul_env_test.py
