[project]
name = "azul_ai_env"
version = "1.0.3"
authors = [{name = "Evaldas Visockas", email = "developersediary@gmail.com"}]
description = "A library to enable AI agent training on board game"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "azul-game-engine>=1.0.2"
]

[project.urls]
Repository = "https://github.com/AzulImplementation/AzulMARL"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["azul_ai_env"]